--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Site description">
+  <meta name="description" content="Somos una empresa líder en el sector de la impresión en La Habana">
   <meta name="author" content="Your Name">
   <link rel="canonical" href="http://localhost:4000/404.html">
 
@@ -127,7 +127,7 @@ document.getElementById("page-top").className="bg-light";
 
 
 <div id="whatsapp" class="whatsapp__fixed">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Necesito+informaci%C3%B3n" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Necesito+informaci%C3%B3n" target="_blank">
     <img src="assets/img/whatsapp.svg" width="80px" height="80px">
   </a>
 </div>
