--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Site description">
+  <meta name="description" content="Somos una empresa líder en el sector de la impresión en La Habana">
   <meta name="author" content="Your Name">
   <link rel="canonical" href="http://localhost:4000/portfolio.html">
 
@@ -335,7 +335,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+de+elemento+1" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+de+elemento+1" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -439,7 +439,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+del+elemento+2" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+del+elemento+2" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -543,7 +543,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+del+elemento+3" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+del+elemento+3" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -647,7 +647,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+del+elemento+4" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+del+elemento+4" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -751,7 +751,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+del+elemento+5" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+IMPRESIONES%2FEjemplo+del+elemento+5" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -1015,7 +1015,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+1" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+1" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -1119,7 +1119,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+2" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+2" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -1223,7 +1223,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+3" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+3" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -1327,7 +1327,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+4" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+4" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -1431,7 +1431,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+5" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Me+interesa+este+producto%3A+TIENDA%2FEjemplo+del+elemento+5" target="_blank">
     <img src="assets/img/whatsapp.svg" width="40px" height="40px">
   </a>
 </div>
@@ -1473,7 +1473,7 @@ encabezado.</strong></p>
             <img class="assessor-img" src="/assets/img/assessor.jpg" width="100px" height="100px">
             <h4 class="assessor-text" style="color: white">Eimys Justinini Pérez</h4>
             <h5 class="assessor-text" style="color: white">
-                <a href="tel:+16503003868"> +16503003868</a>
+                <a href="tel:+5354101365"> +5354101365</a>
             </h5>
 
         </div>
@@ -1529,7 +1529,7 @@ encabezado.</strong></p>
 
 
 <div id="whatsapp" class="whatsapp__fixed">
-  <a href="https://wa.me/16503003868?lang=es&text=Hola!+Necesito+informaci%C3%B3n" target="_blank">
+  <a href="https://wa.me/5354101365?lang=es&text=Hola!+Necesito+informaci%C3%B3n" target="_blank">
     <img src="assets/img/whatsapp.svg" width="80px" height="80px">
   </a>
 </div>
